[package]
name = "zerostash-bench"
version = "0.1.0"
authors = ["Peter Parkanyi <me@rhapsodhy.hu>"]
repository = "https://github.com/rsdy/zerostash"
license = "GPL-3.0"
edition= "2018"

[dependencies]
infinitree = { git = "https://github.com/symmetree-labs/infinitree" }
zerostash-files = { path = "../zerostash-files" }
walkdir = "^2.2.7"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "parking_lot"] }
num_cpus = "1"
tracing-subscriber = "0.3"
tracing = "0.1"

[dev-dependencies]
infinitree = { git = "https://github.com/symmetree-labs/infinitree", features = [ "_test" ] }
getrandom = "*"
memmap2 = "*"

[[bin]]
path = "src/main.rs"
name = "0s-bench"
