[package]
name = "zerostash-bench"
version = "0.1.0"
authors = ["Peter Parkanyi <me@rhapsodhy.hu>"]
repository = "https://github.com/rsdy/zerostash"
license = "MIT/Apache-2.0"
edition= "2021"

[dependencies]
infinitree = { version = "0.6", default-features = false, features=["rustls", "s3", "mmap"] }
zerostash-files = { path = "../zerostash-files" }
walkdir = "^2.2.7"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "parking_lot"] }
num_cpus = "1"
tracing-subscriber = "0.3"
tracing = "0.1"

[dev-dependencies]
infinitree = { version = "0.6", default-features = false, features=["rustls", "s3", "mmap"] }
getrandom = "*"
memmap2 = "*"

[[bin]]
path = "src/main.rs"
name = "0s-bench"
