[package]
name = "zerostash-bench"
version = "0.1.0"
authors = ["Peter Parkanyi <me@rhapsodhy.hu>"]
repository = "https://github.com/rsdy/zerostash"
license = "MIT/Apache-2.0"
edition= "2021"

[dependencies]
infinitree = { version = "0.8.0", default-features = false, features = ["rustls", "s3", "mmap"] }
zerostash-files = { path = "../zerostash-files" }
walkdir = "2.3.2"
tokio = { version = "1.18.2", features = ["rt", "macros", "rt-multi-thread", "parking_lot"] }
num_cpus = "1.13.1"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"

[dev-dependencies]
infinitree = { version = "0.8.0", default-features = false, features = ["rustls", "s3", "mmap"] }
getrandom = "0.2.6"
memmap2 = "0.5.3"

[[bin]]
path = "src/main.rs"
name = "0s-bench"
