[package]
name = "infinitree"
version = "0.1.0"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
repository = "https://github.com/symmetree-labs/infinitree"
license = "GPL-3.0"
build = "build.rs"
edition= "2018"

[features]
default = ["s3", "mmap"]
s3 = ["rusoto_core", "rusoto_s3", "tokio"]
mmap = ["memmap2"]
test = []

[dependencies]
blake2b_simd = "0.5"
getrandom = "0.2"
ring = "0.16"
rust-argon2 = "0.8"

lz4_flex = { version = "0.9.0", default-features = false , features = ["frame"] }

async-trait = { version = "^0.1" }
dashmap = "^4.0"
scc = "0.5"
flume = "^0.10"
libc = "0.2"
lru = "0.7"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
parking_lot = "0.11"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["rc"] }
rmp-serde = "^0.15"
serde_derive = "1.0"

secrecy = "0.8"
zeroize = "^1"

infinitree-macros = { path = "../infinitree-macros"}

rusoto_core = { version="0.47", default_features=false, features=["rustls"], optional = true }
rusoto_s3 = { version="0.47", default_features=false, features=["rustls"], optional = true }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread"], optional = true }

memmap2 = { version = "0.5", optional = true}

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread"] }