[package]
name = "libzerostash"
version = "0.1.0"
authors = ["Peter Parkanyi <me@rhapsodhy.hu>"]
repository = "https://github.com/rsdy/zerostash"
license = "GPL-3.0"
build = "build.rs"
edition= "2018"

[dependencies]
blake2b_simd = "0.5"
dashmap = "^4.0"
getrandom = "0.2"
glob = { version = "0.3" }
itertools = "0.10"
libc = "0.2"
lru = "0.6"
memmap2 = "0.2"
ring = "0.16"
rust-argon2 = "0.8"
seahash = "4.0"
secrecy = "0.7"
serde = { version = "1.0", features = ["rc"] }
serde_cbor = "^0.11.1"
serde_derive = "1.0"
thiserror = "1.0"
zeroize = "1.1"
ignore = "^0.4"
tokio = { version = "^1", features = ["fs", "rt", "sync", "parking_lot"] }
async-trait = { version = "^0.1" }
flume = "^0.10"
futures = "0.3"
lz4_flex = { version = "0.8.0", default-features = false , features = ["frame"] }

[dev-dependencies]
criterion = "0.3"