[package]
name = "zerostash-files"
description = "Safe and secure backup library"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
repository = "https://github.com/symmetree-labs/zerostash"
license = "MIT/Apache-2.0"
version = "0.7.0"
edition = "2021"
keywords = ["crypto", "api", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem"]

[dependencies]
infinitree = { git = "https://github.com/symmetree-labs/infinitree", features = ["mmap"] }
serde = { version = "1.0.215", features = ["rc"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
thiserror = "2.0.3"

memmap2 = "0.9.5"
glob = "0.3.1"
ignore = "0.4.23"

flume = "0.11.1"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["fs", "io-util", "rt", "sync"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }

itertools = "0.13.0"
seahash = "4.1.0"

libc = "0.2.162"
nix = { version = "0.29.0", default-features = false, features = ["fs", "user"] }

chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }

scc = { version = "2.2.4", features = ["serde"] }
rand = "0.8.5"

[dev-dependencies]
getrandom = "0.2.15"
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
criterion = "0.5.1"
infinitree = { git = "https://github.com/symmetree-labs/infinitree", features = ["test"] }

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"
