[package]
name = "zerostash-fuse"
description = "Safe and secure backup library -- FUSE integration"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Muiz Pieper <Muiz-Erem@gmx.de>"]
license = "MIT/Apache-2.0"
version = "0.7.0"
edition = "2021"
keywords = ["crypto", "api", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitree = { version = "0.10.4" }
zerostash-files = { version = "0.7.0", path = "../zerostash-files" }
scc = "2.0.4"
fuse_mt = "0.6.1"
tracing = "0.1.40"
nix = { version = "0.27.1", default-features = false, features = ["user"] }
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["rt", "time", "signal", "rt-multi-thread"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "fuse_bench"
harness = false
path = "benches/bench.rs"
