[package]
name = "zerostash-fuse"
description = "Safe and secure backup library -- FUSE integration"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Muiz Pieper <Muiz-Erem@gmx.de>"]
license = "MIT/Apache-2.0"
version = "0.7.0"
edition = "2021"
keywords = ["crypto", "api", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitree = {git = "https://github.com/symmetree-labs/infinitree"}
zerostash-files = { version = "0.7.0", path = "../zerostash-files" }
scc = "2.2.0"
fuse_mt = "0.6.1"
tracing = "0.1.40"
nix = { version = "0.29.0", default-features = false, features = ["user"] }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt", "time", "signal", "rt-multi-thread"] }
rand = "0.8.5"
flume = "0.11.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "fuse_bench"
harness = false
path = "benches/bench.rs"
