[package]
name = "zerostash"
description = "Safe and secure backup CLI"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
repository = "https://github.com/symmetree-labs/zerostash"
license = "MIT/Apache-2.0"
version = "0.7.0"
edition = "2021"
keywords = ["crypto", "cli", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem", "command-line-utilities"]


[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.43"
clap = "4.3.11"
infinitree = { version = "0.10.4", features = ["cryptobox", "yubikey"] }
infinitree-backends = { version = "0.10.5", default-features = false, features = ["rustls"] }
zerostash-files = { version = "0.7.0", path = "../zerostash-files" }
zerostash-fuse = { version = "0.7.0", path = "../zerostash-fuse", optional = true}
rpassword = "7.2.0"
rprompt = "2.0.2"
serde = { version = "1.0.167", features = ["serde_derive"] }
toml = "0.7.6"
bech32 = "0.9.1"

dirs = "5.0.1"
xdg = "2.5.0"

async-trait = "0.1.71"
humansize = "2.1.3"
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
termcolor = "1.2.0"
nix = { version = "0.26.2", default-features = false, features = ["user"] }
abscissa_tokio= "0.7.0"
abscissa_core= "0.7.0"
regex = "1.9.0"

secrecy = { version = "0.8.0", features = ["serde"] }

[features]
fuse = ["dep:zerostash-fuse"]

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9.1"

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
abscissa_tokio = "0.7.0"
walkdir = "2.3.3"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[[bench]]
name = "bench"
harness = false
path = "../bench/main.rs"
