[package]
name = "zerostash"
description = "Safe and secure backup CLI"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
repository = "https://github.com/symmetree-labs/zerostash"
license = "MIT/Apache-2.0"
version = "0.8.0"
edition = "2021"
keywords = ["crypto", "cli", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem", "command-line-utilities"]


[dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
clap = "4.5.21"
infinitree = { git = "https://github.com/symmetree-labs/infinitree", features = ["cryptobox", "yubikey"] }
infinitree-backends = { git = "https://github.com/symmetree-labs/infinitree", default-features = false, features = ["rustls"] }
zerostash-files = { version = "0.8.0", path = "../zerostash-files" }
zerostash-fuse = { version = "0.8.0", path = "../zerostash-fuse", optional = true}
rpassword = "7.3.1"
rprompt = "2.1.1"
serde = { version = "1.0.215", features = ["serde_derive"] }
toml = "0.8.19"
bech32 = "0.11.0"

dirs = "5.0.1"
xdg = "2.5.2"

async-trait = "0.1.83"
humansize = "2.1.3"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
termcolor = "1.4.1"
nix = { version = "0.29.0", default-features = false, features = ["user"] }
abscissa_tokio= "0.8.0"
abscissa_core= "0.8.1"
regex = "1.11.1"

secrecy = { version = "0.10.3", features = ["serde"] }

[features]
fuse = ["dep:zerostash-fuse"]

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0.1"

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
abscissa_tokio = "0.8.0"
walkdir = "2.5.0"
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[[bench]]
name = "bench"
harness = false
path = "../bench/main.rs"
